# pymoney

./: .gitignore  LICENSE.md  README.md  pyproject.toml
src/money/: money.py
tests/: test_money.py
