[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymoney"
version = "0.0.1"
authors = [
  { name="Andy Vanosdale", email="andy@waviisoft.com" },
]
description = "Google Cloud's Money Type for Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/andyvanosdale/pymoney"
"Bug Tracker" = "https://github.com/andyvanosdale/pymoney/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
